--- a/articlesView.html
+++ b/articlesView.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <div th:replace="header :: header"/>
-    <title>Manage Articles Page</title>
+    <title>Articles Page</title>
 </head>
 <body>
 <div th:replace="nav :: navigation"></div>
@@ -10,13 +10,13 @@
     <div class="row content">
         <div class="col-sm-2 sidenav" th:insert="sideLeft :: sideLeft">
         </div>
-        <div class="container-fluid col-sm-8 text-left" id="mainText">
-            <div class="col-sm-10 text-center">
+        <div class="col-sm-8 text-left" id="mainText">
+            <div class="row text-center">
                 <h2>Lista artykułów</h2>
             </div>
-            <div class="row">
-                <div class="panel panel-default col-sm-3" th:each="article : ${articlesCol}">
-                    <a th:href="@{/manageArticle(id=${article.id})}">
+            <div class="col-sm-4" th:each="article : ${articlesCol}">
+                <div class="panel panel-default">
+                    <a th:href="@{/viewArticle(id=${article.id})}">
                         <div class="panel-heading">
                             <h3 class="panel-title"><span th:text="${article.title}"></span></h3>
                         </div>
